Update submodule git branch for haddock
This is meta-information is used by commands such as e.g.

  git submodule update --remote util/haddock

[skip ci]

--- a/.gitmodules
+++ b/.gitmodules
@@ -103,7 +103,7 @@
 	path = utils/haddock
 	url = ../haddock.git
 	ignore = none
-	branch = ghc-head
+	branch = master
 [submodule "nofib"]
 	path = nofib
 	url = ../nofib.git
