--- a/testsuite/tests/profiling/should_run/prof-doc-fib.prof.sample
+++ b/testsuite/tests/profiling/should_run/prof-doc-fib.prof.sample
@@ -1,9 +1,9 @@
-	Thu Oct 27 09:29 2011 Time and Allocation Profiling Report  (Final)
+	Wed Jan 28 11:24 2015 Time and Allocation Profiling Report  (Final)
 
-	   fib +RTS -p -RTS
+	   prof-doc-fib +RTS -hc -p -RTS
 
-	total time  =        0.76 secs   (38 ticks @ 20 ms)
-	total alloc = 247,940,020 bytes  (excludes profiling overheads)
+	total time  =        0.08 secs   (83 ticks @ 1000 us, 1 processor)
+	total alloc = 107,829,264 bytes  (excludes profiling overheads)
 
 COST CENTRE MODULE  %time %alloc
 
@@ -13,13 +13,16 @@ fib         Main    100.0  100.0
                                                       individual     inherited
 COST CENTRE MODULE                  no.     entries  %time %alloc   %time %alloc
 
-MAIN        MAIN                    102           0    0.0    0.0   100.0  100.0
- CAF        Main                    203           0    0.0    0.0   100.0  100.0
-  main      Main                    204           1    0.0    0.0   100.0  100.0
-   main.g   Main                    207           1    0.0    0.0     0.0    0.1
-    fib     Main                    208        1973    0.0    0.1     0.0    0.1
-   main.f   Main                    205           1    0.0    0.0   100.0   99.9
-    fib     Main                    206     2692537  100.0   99.9   100.0   99.9
- CAF        GHC.Conc.Signal         201           0    0.0    0.0     0.0    0.0
- CAF        GHC.IO.Encoding.Iconv   191           0    0.0    0.0     0.0    0.0
- CAF        GHC.IO.Handle.FD        183           0    0.0    0.0     0.0    0.0
+MAIN        MAIN                     98           0    0.0    0.0   100.0  100.0
+ main       Main                    197           0    0.0    0.0     0.0    0.0
+ CAF        Main                    195           0    0.0    0.0   100.0  100.0
+  main      Main                    196           1    0.0    0.0   100.0  100.0
+   main.f   Main                    200           1    0.0    0.0   100.0   99.9
+    fib     Main                    201     2692537  100.0   99.9   100.0   99.9
+   main.g   Main                    198           1    0.0    0.0     0.0    0.1
+    fib     Main                    199        1973    0.0    0.1     0.0    0.1
+ CAF        GHC.Conc.Signal         189           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Encoding         179           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Encoding.Iconv   177           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Handle.FD        169           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Handle.Text      167           0    0.0    0.0     0.0    0.0
