--- a/testsuite/tests/ghc-api/T7478/Makefile
+++ b/testsuite/tests/ghc-api/T7478/Makefile
@@ -9,3 +9,4 @@ T7478: clean
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc T7478.hs
 	./T7478 "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
+.PHONY: clean T7478
