--- a/testsuite/tests/ghc-api/annotations-literals/Makefile
+++ b/testsuite/tests/ghc-api/annotations-literals/Makefile
@@ -15,4 +15,4 @@ parsed:
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc parsed
 	./parsed "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
-.PHONY: clean
+.PHONY: clean literals parsed
