--- a/testsuite/tests/ghc-api/show-srcspan/Makefile
+++ b/testsuite/tests/ghc-api/show-srcspan/Makefile
@@ -10,4 +10,4 @@ showsrcspan: clean
 	./showsrcspan "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
 
-.PHONY: clean
+.PHONY: clean showsrcspan
