testsuite: update .gitignore
Signed-off-by: Austin Seipp <austin@well-typed.com>

--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -1544,3 +1544,4 @@ mk/ghcconfig*_inplace_bin_ghc-stage2.exe.mk
 /timeout/calibrate.out
 /timeout/dist/
 /timeout/install-inplace/
+/tests/driver/T7373/package.conf.d/
