`make test` in root directory now runs fulltest
Summary:
Currently, running `make test` in:
  /                   runs fast testsuite
  /testsuite          doesn't work
  /testsuite/tests    runs slow testsuite

This commit:
  * changes `make test` in the ghc root directory to run the slow testsuite,
    just like it already does in `testsuite/tests`
  * adds some simple targets to `/testsuite`, that all delegate to
    `/testsuite/tests`
  * adds a new target `fasttest` to the toplevel Makefile, with a shorthand
    name `fast` (for consistency with /testsuite and /testsuite/tests)
  * declares some more targets PHONY for safety

Wiki pages that need updating:
  * Building/StandardTargets
  * Buliding/RunningTests

Reviewers: austin

Reviewed By: austin

Subscribers: thomie

Differential Revision: https://phabricator.haskell.org/D685

--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -11,14 +11,28 @@ ifneq "$(MAKECMDGOALS)" "maintainer-clean"
 
 include $(TOP)/mk/boilerplate.mk
 
+.PHONY: all boot test verbose accept fast list_broken
+
 boot:
 	$(MAKE) -C $(TOP)/timeout all
 
 all:
 	$(MAKE) -C $(TOP)/tests all
 
+test:
+	$(MAKE) -C $(TOP)/tests test
+
+verbose:
+	$(MAKE) -C $(TOP)/tests verbose
+
+accept:
+	$(MAKE) -C $(TOP)/tests accept
+
 fast:
 	$(MAKE) -C $(TOP)/tests fast
+
+list_broken:
+	$(MAKE) -C $(TOP)/tests list_broken
 
 endif
 endif
