Add `GHC.OldList` legacy module
This module provides access the list-specialised versions for legacy purposes
(such as implementing Haskell2010-ish preludes). This module basically
re-exports the hidden `Data.OldList` module (but in the less controversial `GHC.*`
namespace, which signals less committment to keep this module around).

This is legacy module is mostly for GHC 7.10's sake. What becomes long-term
of `GHC.OldList` can be decided unhurriedly during the GHC 7.12 development
cycle.

Reviewed By: austin

Differential Revision: https://phabricator.haskell.org/D689

--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -246,6 +246,7 @@ Library
         GHC.MVar
         GHC.Natural
         GHC.Num
+        GHC.OldList
         GHC.PArr
         GHC.Pack
         GHC.Profiling
