Fix build on amd64/solaris.
Summary:
Commit 71fcc4c096ec0 breaks the 64bit build on Solaris 11. Solaris
is a multi-lib OS so both 32bit and 64bit binaries may  be run, but
by default it compiles to 32bit so that -m64 needs to be added in
the appropriate place when compiling for 64 bits.

Patch-from: Karel Gardas <karel.gardas@centrum.cz>

Reviewers: kgardas, austin

Subscribers: thomie

Differential Revision: https://phabricator.haskell.org/D733

(cherry picked from commit 83afcd174cdbf4fb770371da764f91ca9ad414a7)

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -568,6 +568,7 @@ define set_stage_HSC2HS_OPTS
 # $1 = stage
 SRC_HSC2HS_OPTS_STAGE$1 += $$(addprefix --cflag=,$$(filter-out -O,$$(SRC_CC_OPTS) $$(CONF_CC_OPTS_STAGE$1)))
 SRC_HSC2HS_OPTS_STAGE$1 += $$(addprefix --cflag=,$$(CONF_CPP_OPTS_STAGE$1))
+SRC_HSC2HS_OPTS_STAGE$1 += $$(addprefix --lflag=,$$(CONF_GCC_LINKER_OPTS_STAGE$1))
 endef
 $(eval $(call set_stage_HSC2HS_OPTS,0))
 $(eval $(call set_stage_HSC2HS_OPTS,1))
