--- a/utils/hpc/hpc-bin.cabal
+++ b/utils/hpc/hpc-bin.cabal
@@ -43,6 +43,7 @@ Executable hpc
 
     if flag(base3) || flag(base4)
         Build-Depends: directory  >= 1   && < 1.3,
+                       filepath   >= 1   && < 1.5,
                        containers >= 0.1 && < 0.6,
                        array      >= 0.1 && < 0.6
     Build-Depends: hpc
