--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -99,7 +99,7 @@ Library
         UnliftedFFITypes
         Unsafe
 
-    build-depends: rts == 1.0.*, ghc-prim >= 0.3.1 && < 0.4
+    build-depends: rts == 1.0.*, ghc-prim == 0.4.*
     if flag(integer-simple)
         build-depends: integer-simple >= 0.1.1 && < 0.2
 
