Fix integer-gmp source tarball distribution
The `configure` script checks for presence of `install-sh` even if
it's not used, so we simply add it to the distribution to make `configure`
happy.

(cherry picked from commit cab5b3acc514dc7beafc3527625c687c8a5116a0)

--- a/libraries/integer-gmp2/integer-gmp.cabal
+++ b/libraries/integer-gmp2/integer-gmp.cabal
@@ -19,6 +19,7 @@ extra-source-files:
     configure.ac
     gmp/config.mk.in
     include/HsIntegerGmp.h.in
+    install-sh
     integer-gmp.buildinfo.in
 
 extra-tmp-files:
