--- a/libraries/integer-gmp/integer-gmp.cabal
+++ b/libraries/integer-gmp/integer-gmp.cabal
@@ -1,41 +1,26 @@
-name:           integer-gmp
-version:        0.5.1.0
--- GHC 7.6.1 released with 0.5.0.0
-license:        BSD3
-license-file:   LICENSE
-category:       Numerical
-maintainer:     libraries@haskell.org
-bug-reports:    http://ghc.haskell.org/trac/ghc/newticket?component=libraries%20%28other%29&keywords=integer-gmp
-synopsis:       Integer library based on GMP
-description:
-    This package provides the low-level implementation of the standard
-    'Integer' type based on the
-    <http://gmplib.org/ GNU Multiple Precision Arithmetic Library (GMP)>.
-    .
-    This package provides access to the internal representation of
-    'Integer' as well as primitive operations with no proper error
-    handling, and should only be used directly with the utmost care.
-    .
-    For more details about the design of @integer-gmp@, see
-    <https://ghc.haskell.org/trac/ghc/wiki/Commentary/Libraries/Integer GHC Commentary: Libraries/Integer>.
-build-type:     Configure
-cabal-version:  >=1.10
+name:                integer-gmp
+version:             1.0.0.0
+synopsis:            Integer library based on GMP
+license:             BSD3
+license-file:        LICENSE
+author:              Herbert Valerio Riedel
+maintainer:          hvr@gnu.org
+category:            Numeric, Algebra
+build-type:          Configure
+cabal-version:       >=1.10
 
 extra-source-files:
     aclocal.m4
-    cbits/alloc.c
-    cbits/float.c
-    cbits/gmp-wrappers.cmm
-    cbits/longlong.c
+    cbits/wrappers.c
     changelog.md
     config.guess
     config.sub
     configure
     configure.ac
     gmp/config.mk.in
+    include/HsIntegerGmp.h.in
     install-sh
     integer-gmp.buildinfo.in
-    include/HsIntegerGmp.h.in
 
 extra-tmp-files:
     autom4te.cache
@@ -45,36 +30,37 @@ extra-tmp-files:
     integer-gmp.buildinfo
     include/HsIntegerGmp.h
 
-source-repository head
-    type:     git
-    location: http://git.haskell.org/ghc.git
-    subdir:   libraries/integer-gmp
+library
+  default-language:    Haskell2010
+  other-extensions:
+    BangPatterns
+    CApiFFI
+    CPP
+    DeriveDataTypeable
+    ExplicitForAll
+    GHCForeignImportPrim
+    MagicHash
+    NegativeLiterals
+    NoImplicitPrelude
+    RebindableSyntax
+    StandaloneDeriving
+    UnboxedTuples
+    UnliftedFFITypes
+  build-depends:       ghc-prim
+  hs-source-dirs:      src/
+  ghc-options: -this-package-key integer-gmp -Wall
+  cc-options: -std=c99 -Wall
 
-Library
-    default-language: Haskell2010
-    other-extensions:
-        BangPatterns
-        CPP
-        GHCForeignImportPrim
-        MagicHash
-        NoImplicitPrelude
-        UnboxedTuples
-        UnliftedFFITypes
+  include-dirs: include
+  c-sources:
+    cbits/wrappers.c
 
-    exposed-modules:
-        GHC.Integer
-        GHC.Integer.GMP.Internals
-        GHC.Integer.GMP.Prim
-        GHC.Integer.Logarithms
-        GHC.Integer.Logarithms.Internals
-    other-modules:
-        GHC.Integer.Type
+  exposed-modules:
+    GHC.Integer
+    GHC.Integer.Logarithms
+    GHC.Integer.Logarithms.Internals
 
-    c-sources: cbits/cbits.c
-    include-dirs: include
+    GHC.Integer.GMP.Internals
 
-    build-depends: ghc-prim == 0.4.*
-
-    -- We need to set the package key to integer-gmp
-    -- (without a version number) as it's magic.
-    ghc-options: -Wall -this-package-key integer-gmp
+  other-modules:
+    GHC.Integer.Type
