Disable same warnings for normal builds as for validate (#10223)
The default validate settings currently disable some warnings in the
libraries. This patch moves those settings to a new file called
`mk/warnings.mk`, and applies them also to normal builds.

Through uncommenting a line in build.mk, developers can now build with
-Werror.

-Werror is not the default, because:
* We can not guarantee that the build is warning free on platforms we
  don't run regularly run validate (as part of continuous integration
  systems), and we still want the build to go through on those
  platforms.
* quoting rwbarton on irc > "I think -Werror by default has come up in
  the past and the argument was that it is too annoying when you are
  doing nontrivial development"

Reviewed By: austin

Differential Revision: https://phabricator.haskell.org/D785

--- a/mk/build.mk.sample
+++ b/mk/build.mk.sample
@@ -57,6 +57,9 @@
 # Please use V = 1 when reporting GHC bugs.
 V = 1
 
+# Should all enabled warnings (see mk/warnings.mk) be turned into errors?
+#WERROR=-Werror
+
 # After stage 1 and the libraries have been built, you can uncomment this line:
 
 #stage=2
